# advent-of-code

./: .gitignore  README.adoc
2015/src/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py
2019/: Makefile
2019/src/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  vm.py
2022/: CMakeLists.txt  flake.nix  init.sh  main.cpp  main.py  what-did-we-learn.md
2022/01/: main.cpp
2022/02/: main.cpp
2022/03/: main.cpp
2022/04/: main.cpp
2022/05/: main.cpp
2022/06/: main.cpp
2022/07/: main.cpp
2022/08/: main.cpp
2022/09/: main.cpp
2022/10/: main.cpp
2022/11/: main.cpp
2022/12/: main.cpp
2022/13/: main.cpp  main.py
2022/14/: main.py
2022/15/: main.py
2022/16/: input.dot  main.py
2022/scripts/: build.sh  cmake.sh  init.sh  run.sh
