cmake_minimum_required(VERSION 3.24)

project(advent LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O0 -g -Wall -Wextra -rdynamic")

add_executable(01 01/main.cpp)
add_executable(02 02/main.cpp)
add_executable(03 03/main.cpp)
add_executable(04 04/main.cpp)
add_executable(05 05/main.cpp)
add_executable(06 06/main.cpp)
add_executable(07 07/main.cpp)
add_executable(08 08/main.cpp)
add_executable(09 09/main.cpp)
add_executable(10 10/main.cpp)
add_executable(11 11/main.cpp)
add_executable(12 12/main.cpp)
add_executable(13 13/main.cpp)
